[gd_scene load_steps=46 format=3 uid="uid://yuy26luo7yap"]

[ext_resource type="Script" uid="uid://c7nkk8d17hssq" path="res://sans.gd" id="1_o7qq0"]
[ext_resource type="Texture2D" uid="uid://cjqq6bofwcdqp" path="res://sprites/sans/phase_1/LegsSheetPhase1.png" id="2_vljcc"]
[ext_resource type="Texture2D" uid="uid://d06n3kp0qc3l4" path="res://sprites/sans/phase_1/TorsosSheetPhase1.png" id="3_wavc7"]
[ext_resource type="Texture2D" uid="uid://dm8dywjmsyn6g" path="res://sprites/sans/phase_1/HeadsSheetPhase1.png" id="4_lrdbd"]
[ext_resource type="Texture2D" uid="uid://kqs4fwf5vjvl" path="res://art/icons/icon-temp.png" id="5_vljcc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2sj6m"]
atlas = ExtResource("2_vljcc")
region = Rect2(0, 0, 47, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_jtw8i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sj6m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_k53q3"]
atlas = ExtResource("3_wavc7")
region = Rect2(0, 0, 61, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_5xdhn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k53q3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0jqgd"]
atlas = ExtResource("4_lrdbd")
region = Rect2(0, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5csx5"]
atlas = ExtResource("4_lrdbd")
region = Rect2(33, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2c2n"]
atlas = ExtResource("4_lrdbd")
region = Rect2(198, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2j4b"]
atlas = ExtResource("4_lrdbd")
region = Rect2(231, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp1jn"]
atlas = ExtResource("4_lrdbd")
region = Rect2(33, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_n44bf"]
atlas = ExtResource("4_lrdbd")
region = Rect2(231, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxpk4"]
atlas = ExtResource("4_lrdbd")
region = Rect2(132, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b4oo"]
atlas = ExtResource("4_lrdbd")
region = Rect2(99, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtjn1"]
atlas = ExtResource("4_lrdbd")
region = Rect2(99, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uk3y"]
atlas = ExtResource("4_lrdbd")
region = Rect2(132, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_k71ee"]
atlas = ExtResource("4_lrdbd")
region = Rect2(165, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_imyyo"]
atlas = ExtResource("4_lrdbd")
region = Rect2(132, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgal0"]
atlas = ExtResource("4_lrdbd")
region = Rect2(0, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d5h0"]
atlas = ExtResource("4_lrdbd")
region = Rect2(33, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5t0uv"]
atlas = ExtResource("4_lrdbd")
region = Rect2(66, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a14e"]
atlas = ExtResource("4_lrdbd")
region = Rect2(99, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0wpq"]
atlas = ExtResource("4_lrdbd")
region = Rect2(66, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqunq"]
atlas = ExtResource("4_lrdbd")
region = Rect2(0, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4j7c"]
atlas = ExtResource("4_lrdbd")
region = Rect2(264, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp1vx"]
atlas = ExtResource("4_lrdbd")
region = Rect2(66, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_liopl"]
atlas = ExtResource("4_lrdbd")
region = Rect2(33, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_skugg"]
atlas = ExtResource("4_lrdbd")
region = Rect2(264, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j43r"]
atlas = ExtResource("4_lrdbd")
region = Rect2(231, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_xblg7"]
atlas = ExtResource("4_lrdbd")
region = Rect2(132, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0e0y"]
atlas = ExtResource("4_lrdbd")
region = Rect2(165, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s4jp"]
atlas = ExtResource("4_lrdbd")
region = Rect2(264, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn2x7"]
atlas = ExtResource("4_lrdbd")
region = Rect2(165, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8ie6"]
atlas = ExtResource("4_lrdbd")
region = Rect2(297, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xlyk"]
atlas = ExtResource("4_lrdbd")
region = Rect2(297, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2j27"]
atlas = ExtResource("4_lrdbd")
region = Rect2(198, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l1et"]
atlas = ExtResource("4_lrdbd")
region = Rect2(231, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlwls"]
atlas = ExtResource("4_lrdbd")
region = Rect2(198, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcrrl"]
atlas = ExtResource("4_lrdbd")
region = Rect2(165, 32, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_esvvv"]
atlas = ExtResource("4_lrdbd")
region = Rect2(297, 64, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_v81nc"]
atlas = ExtResource("4_lrdbd")
region = Rect2(297, 32, 31, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_47o7j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jqgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5csx5")
}],
"loop": true,
"name": &"blueEye",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2c2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2j4b")
}],
"loop": true,
"name": &"blueEye2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp1jn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n44bf")
}],
"loop": true,
"name": &"default2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxpk4")
}],
"loop": true,
"name": &"disapointed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b4oo")
}],
"loop": true,
"name": &"disapointed2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtjn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uk3y")
}],
"loop": true,
"name": &"disapointedBlue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k71ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imyyo")
}],
"loop": true,
"name": &"disapointedOrange",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgal0")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d5h0")
}],
"loop": true,
"name": &"hurt2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5t0uv")
}],
"loop": true,
"name": &"hurt3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a14e")
}],
"loop": true,
"name": &"lookLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0wpq")
}],
"loop": true,
"name": &"lookRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqunq")
}],
"loop": true,
"name": &"noEyes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4j7c")
}],
"loop": true,
"name": &"noEyes2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp1vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liopl")
}],
"loop": true,
"name": &"orangeEye",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skugg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j43r")
}],
"loop": true,
"name": &"orangeEye2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xblg7")
}],
"loop": true,
"name": &"wink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0e0y")
}],
"loop": true,
"name": &"wink2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s4jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn2x7")
}],
"loop": true,
"name": &"winkBlue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8ie6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xlyk")
}],
"loop": true,
"name": &"winkBlue2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2j27")
}],
"loop": true,
"name": &"winkNoEyes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l1et")
}],
"loop": true,
"name": &"winkNoEyes2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlwls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcrrl")
}],
"loop": true,
"name": &"winkOrange",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_esvvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v81nc")
}],
"loop": true,
"name": &"winkOrange2",
"speed": 5.0
}]

[node name="Sans" type="Node2D"]
script = ExtResource("1_o7qq0")

[node name="SansLegs" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_jtw8i")
offset = Vector2(0, -15.5)

[node name="SansTorso" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_5xdhn")
offset = Vector2(0, -40.5)

[node name="SansHead" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_47o7j")
offset = Vector2(0, -63.5)

[node name="IconTemp" type="Sprite2D" parent="."]
position = Vector2(-80, -56)
texture = ExtResource("5_vljcc")
